Switched to Java 9 and fixed deprecated code.